@startuml
title MedicalVision Backend - Diagramme de classes

left to right direction
skinparam classAttributeIconSize 0
hide empty methods

package "Gestion des utilisateurs" {
  enum UserRole {
    ADMIN
    DOCTOR
  }

  enum AccountStatus {
    PENDING
    APPROVED
    REJECTED
  }

  class User {
    +id: int
    +full_name: string
    +email: string
    +password_hash: string
    +role: UserRole
    +status: AccountStatus
  }
}

package "Gestion des projets et datasets" {
  class Project {
    +id: int
    +name: string
    +description: text
    +owner_id: int
    +active_dataset_id: int
    +active_model_id: int
    +created_at: datetime
    +updated_at: datetime
  }

  class Dataset {
    +id: int
    +project_id: int
    +original_name: string
    +stored_name: string
    +file_path: string
    +content_type: string
    +size_bytes: bigint
    +target_column: string
    +kind: string
    +workspace_owner_version_id: int
    +workspace_owner_user_id: int
    +is_workspace_active: bool
    +workspace_expires_at: datetime
    +created_at: datetime
  }

  class DatasetVersion {
    +id: int
    +project_id: int
    +source_dataset_id: int
    +name: string
    +stored_name: string
    +file_path: string
    +content_type: string
    +size_bytes: int
    +target_column: string
    +can_predict: bool
    +operations_json: text
    +created_at: datetime
  }

  class ProcessingOperation {
    +id: int
    +project_id: int
    +dataset_id: int
    +user_id: int
    +op_type: string
    +description: string
    +columns: jsonb
    +params: jsonb
    +created_at: datetime
  }

  class VersionColumnSchema {
    +id: int
    +project_id: int
    +dataset_version_id: int
    +column_name: string
    +inferred_kind: string
    +confidence: float
    +override_kind: string
    +updated_at: datetime
  }
}

package "Entrainement et prediction" {
  class TrainingSession {
    +id: int
    +project_id: int
    +dataset_version_id: int
    +status: string
    +progress: int
    +current_model: string
    +config_json: json
    +error_message: text
    +created_at: datetime
    +started_at: datetime
    +finished_at: datetime
  }

  class TrainedModel {
    +id: int
    +session_id: int
    +project_id: int
    +model_type: string
    +task_type: string
    +is_saved: bool
    +metrics_json: json
    +artifacts_json: json
    +created_at: datetime
  }

  class BalancingAudit {
    +id: uuid
    +session_id: int
    +n_samples: int
    +dataset_scale: string
    +imbalance_ratio: float
    +minority_ratio: float
    +minority_count: int
    +imbalance_level: string
    +class_counts: jsonb
    +strategy_applied: string
    +rationale: text
    +audit_flags: jsonb
    +refit_metric: string
    +optimal_threshold: float
    +threshold_f1_gain: float
    +smote_k_neighbors: int
    +smote_samples_added: int
    +warnings: jsonb
    +created_at: datetime
  }
}

User "1" -- "0..*" Project : owns
Project "1" -- "0..*" Dataset : contains
Project "1" -- "0..*" DatasetVersion : contains
Project "1" -- "0..*" TrainingSession : launches
Project "1" --> "0..1" Dataset : active_dataset
Project "1" --> "0..1" TrainedModel : active_model

Dataset "1" -- "0..*" DatasetVersion : source
DatasetVersion "1" -- "0..*" Dataset : workspaces

Dataset "1" -- "0..*" ProcessingOperation : history
User "1" -- "0..*" ProcessingOperation : performs

DatasetVersion "1" -- "0..*" VersionColumnSchema : schema
Project "1" -- "0..*" VersionColumnSchema

DatasetVersion "1" -- "0..*" TrainingSession : used_by
TrainingSession "1" -- "0..*" TrainedModel : produces
TrainingSession "1" -- "0..*" BalancingAudit : records

note bottom of Dataset
  kind = "source" ou "workspace"
  Un workspace est une copie temporaire
  d'une version pour edition et nettoyage.
end note

note bottom of DatasetVersion
  Represente une version sauvegardee
  apres nettoyage / transformation.
end note

note bottom of TrainingSession
  Stocke la configuration d'entrainement,
  l'etat d'avancement et les erreurs.
end note

note bottom of TrainedModel
  Contient les metriques, artefacts,
  pipeline sauvegarde et informations
  necessaires a la prediction.
end note

@enduml
